--- a/Proyecto/App/templates/productos.html
+++ b/Proyecto/App/templates/productos.html
@@ -29,7 +29,7 @@
               <br>
               <p id="sumaPago">Total: </p>
               <br>
-              <button style="float:left; position: relative;bottom: 20px;" onclick="pagar()">Pagar</button>
+              <button style="float:left; position: relative;bottom: 20px;" onclick="pagar()">Enviar a WhatsApp</button>
           </div>
           
             
@@ -43,6 +43,7 @@
         <a href="{% url 'servicios' %}">Servicios</a>
         <a href="{% url 'productos' %}">Productos</a>
         <a href="{% url 'contacto' %}">Contacto</a>
+        <a href="{% url 'login' %}">Iniciar sesión</a>
       </nav>
     </header>
     
@@ -55,7 +56,7 @@
                     <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" style="width: 100%; height: 170px; object-fit: cover; margin-top: 10px;" loading="lazy">
                     <h1 class="product-title">{{ producto.nombre }}</h1>
                     <div style="height: 120px; overflow-y: auto;">
-                        <p class="product-descripcion" style="height: auto; overflow: hidden; text-overflow: ellipsis;">Descripción: {{ producto.descripcion }}</p>
+                        <p class="product-descripcion" style="height: auto; overflow: hidden; text-overflow: ellipsis;">{{ producto.descripcion }}</p>
                     </div>
                     <p class="price">Precio: ${{ producto.precio }}</p>
                     <p><button class="add-to-cart" data-id="{{ producto.id }}">Añadir al Carrito</button></p>
