--- a/Proyecto/accounts/static/accounts/styles.css
+++ b/Proyecto/accounts/static/accounts/styles.css
@@ -82,6 +82,9 @@ form input, form button {
     margin: 10px 0;
     border-radius: 5px;
     border: 1px solid #ddd;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Botón de Enviar */
