--- a/Proyecto/accounts/templates/accounts/register.html
+++ b/Proyecto/accounts/templates/accounts/register.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <nav>
+        <div style="float: left; margin-left: 50px;">
+            <img src="{% static 'img/logo1.png' %}" alt="logo" style="max-width: 75px;">
+        </div>
+        <nav style="text-align: center; margin-right: 95px; font-size: 1.2em;">
             <a href="{% url 'index' %}">Inicio</a></li>
             <a href="{% url 'login' %}">Iniciar sesión</a></li>
             <a href="{% url 'register' %}">Registrar</a></li>
