--- a/Proyecto/App/templates/productos.html
+++ b/Proyecto/App/templates/productos.html
@@ -346,7 +346,7 @@
 
     </script>
     
-    <footer class="fixed-bottom">
+    <footer class="bottom">
       <p>&copy; 2024 Somos Magas</p>
   </footer>
   </body>
